css-positioning/css-positioning_layout-with-position/css/styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  display: flex;
  flex-direction: column;
  margin: 80px 0 45px 0;
  font-family: system-ui;
}

/**
 *
 * Place the header at the top of the viewport and make sure, that it remains there when the
 * document is scrolled.
 */
.header {
  background: #8236FF;
  color: #ffffff;
  height: 80px;
  box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
  padding: 10px;
  position: fixed;
  top: 0;
  width: 100vw;
}

.header__text {
  color: #FFDEE2;
}

.header__heading {
  margin: 0;
}

/**
 *
 * Place the footer at the bottom of the viewport and make sure, that it remains there when the
 * document is scrolled.
 */
.footer {
  background:  #7fD9E2;
  color: #ffffff;
  height: 48px;
  position: fixed;
  bottom: 0;
  width: 100vw;
  z-index: 10;
}

/**
 *
 * Define the card as reference frame for descendant elements, that require absolute positioning.
 */
.card {
  margin: 20px 10%;
  border: 5px solid #8236FF;
  padding: 3% 10%;
  scroll-margin-top: 100px;
  border-radius: 2rem;
  position: relative;
}

.card__heading {
  margin: 0 0 10px 0;
}

/**
 * Place the bookmark in the top, right corner of each card.
 */
.card__bookmark {
  border: 2px solid #8236FF;
  font-size: 2em;
  padding: 6px 12px;
  border-radius: 50%;
  box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
  position: absolute;
  top: 20px;
  right: 20px;
}

/**
 * The go-to-top button should cover all other elements, so that it is always visible, and
 * unaffected when the document is scrolled.
 */
.goto-top {
  width: 48px;
  height: 48px;
  padding: 8px;
  border-radius: 50%;
  background: #8236FF;
  color: white;
  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
  text-decoration: none;
  flex-shrink: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  position: fixed;
  z-index: 20;
  bottom: 70px;
  right: 20px;
}

